--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* https://geoserver.mundialis.de/geoserver/sentinelMosaic/wms?SERVICE=WMS&VERSION=1.1.0&REQUEST=GetMap&TRANSPARENT=true&LAYERS=sentinelMosaic%3Aart_118A04&bbox=-12664892.96431236,4649035.317864986,-12649045.017685313,4660921.275761676&FORMAT=image%2Fpng&SRS=EPSG%3A3857&STYLES=&WIDTH=1180&HEIGHT=886 */
+/* https://geoserver.mundialis.de/geoserver/sentinelMosaic/wms?SERVICE=WMS&VERSION=1.1.0&REQUEST=GetMap&TRANSPARENT=true&LAYERS=sentinelMosaic%3Aart_118A04&bbox=-12664892.96431236,4649035.317864986,-12649045.017685313,4660921.275761676&FORMAT=image%2Fjpeg&SRS=EPSG%3A3857&STYLES=&WIDTH=1180&HEIGHT=886 */
 
 body {
     width: 100%;
@@ -66,44 +66,44 @@ main {
 
 .flexchild:nth-child(1) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_040302.png');
+    background-image: url('resources/img/sentinelMosaic-art_040302.jpg');
 }
 .flexchild:nth-child(2) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_080403.png');
+    background-image: url('resources/img/sentinelMosaic-art_080403.jpg');
 }
 .flexchild:nth-child(3) {
     /* background-color: #97bf0d; */
-    background-image: url('resources/img/sentinelMosaic-art_12118A.png');
+    background-image: url('resources/img/sentinelMosaic-art_12118A.jpg');
 }
 .flexchild:nth-child(4) {
     /* background-color: #0e1058; */
-    background-image: url('resources/img/sentinelMosaic-art_118A04.png');
+    background-image: url('resources/img/sentinelMosaic-art_118A04.jpg');
 }
 .flexchild:nth-child(5) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_8A1104.png');
+    background-image: url('resources/img/sentinelMosaic-art_8A1104.jpg');
 }
 
 .flexchild:nth-child(8) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_040302.png');
+    background-image: url('resources/img/sentinelMosaic-art_040302.jpg');
 }
 .flexchild:nth-child(9) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_080403.png');
+    background-image: url('resources/img/sentinelMosaic-art_080403.jpg');
 }
 .flexchild:nth-child(10) {
     /* background-color: #97bf0d; */
-    background-image: url('resources/img/sentinelMosaic-art_12118A.png');
+    background-image: url('resources/img/sentinelMosaic-art_12118A.jpg');
 }
 .flexchild:nth-child(6) {
     /* background-color: #0e1058; */
-    background-image: url('resources/img/sentinelMosaic-art_118A04.png');
+    background-image: url('resources/img/sentinelMosaic-art_118A04.jpg');
 }
 .flexchild:nth-child(7) {
     /* background-color: #eb7f00; */
-    background-image: url('resources/img/sentinelMosaic-art_8A1104.png');
+    background-image: url('resources/img/sentinelMosaic-art_8A1104.jpg');
 }
 
 .flexchildhalf {
